# 2048-TDLearning

./: CMakeLists.txt  README.md  TDL2048.cpp  index.html
js/: agent.js  application.js  game_manager.js  grid.js
lib/: Network.cpp  Network.h
weights/: torch_weights_to_json.py
